--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --hot --host 0.0.0.0",
-    "build": "webpack -p"
+    "build": "react-scripts build"
   },
   "author": "computerx",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "coffee-script": "^1.12.4",
     "flux": "^3.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
