--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -1,6 +1,7 @@
 # App settings
 server.address=0.0.0.0
 server.port=8082
+server.contextPath=/api
 # DB settings
 spring.datasource.url=jdbc:mysql://localhost:3306/bottomline?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
