--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -3,7 +3,7 @@ server.address=0.0.0.0
 server.port=8082
 server.contextPath=/api
 # DB settings
-spring.datasource.url=jdbc:mysql://vm-test2.sandbox.lan:3306/bottomline?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/bottomline?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.max-active=100
