--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -3,14 +3,14 @@ server.address=0.0.0.0
 server.port=8082
 server.contextPath=/api
 # DB settings
-spring.datasource.url=jdbc:mysql://vm-test2.sandbox.lan:3306/bottomline?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/bottomline?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.max-active=100
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
