--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -3,8 +3,8 @@ server.address=0.0.0.0
 server.port=8082
 server.contextPath=/api
 # DB settings
-spring.datasource.url=jdbc:mysql://vm-test2.sandbox.lan:3306/bottomline?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://104.238.177.115:3306/bottomline?useUnicode=yes&autoReconnect=true&characterEncoding=utf-8
+spring.datasource.username=bottomline
 spring.datasource.password=12345
 spring.datasource.max-active=100
 spring.datasource.testWhileIdle=true
