--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -2,6 +2,10 @@
 server.address=0.0.0.0
 server.port=8082
 server.contextPath=/api
+smtp.host=smtp.gmail.com
+smtp.port=587
+smtp.user=user
+smtp.pwd=****
 # DB settings
 spring.datasource.url=jdbc:mysql://104.238.177.115:3306/bottomline?useUnicode=yes&autoReconnect=true&characterEncoding=utf-8
 spring.datasource.username=bottomline
