--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -4,8 +4,9 @@ server.port=8082
 server.contextPath=/api
 smtp.host=smtp.gmail.com
 smtp.port=587
-smtp.user=user
+smtp.user=app.bottomline@gmail.com
 smtp.pwd=****
+invitation.base.url=http://localhost:8083/#/
 # DB settings
 spring.datasource.url=jdbc:mysql://104.238.177.115:3306/bottomline?useUnicode=yes&autoReconnect=true&characterEncoding=utf-8
 spring.datasource.username=bottomline
