--- a/src/main/resources/prod/application.properties
+++ b/src/main/resources/prod/application.properties
@@ -1,19 +1,18 @@
 # App settings
 server.address=0.0.0.0
-server.port=8080
+server.port=80
 smtp.host=smtp.gmail.com
 smtp.port=587
 smtp.user=app.bottomline@gmail.com
-smtp.pwd=*****
-invitation.base.url=http://localhost:8083/#/
+smtp.pwd=****
+invitation.base.url=http://bottomline.duckdns.org/#/
 # DB settings
 spring.datasource.url=jdbc:mysql://104.238.177.115:3306/bottomline?useUnicode=yes&autoReconnect=true&characterEncoding=utf-8
 spring.datasource.username=bottomline
-spring.datasource.password=******
+spring.datasource.password=****
 spring.datasource.max-active=100
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.show-sql=false
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
